Fixed bug (image carousel covering TopBar)

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -54,6 +54,7 @@ body {
   position: fixed;
   height: 44px;
   background-color: #333;
+  z-index: 1000;
 }
 .top-bar .container {
   width: 100%;
